# cli-tool-context

./: .eslintrc.json  .gitignore  .markdownlint.json  CHEATSHEET.md  CLAUDE.md  CLAUDE.md.tpl  CLAUDE_IMPROVEMENTS.md  CLEANUP_BRANCH_SUMMARY.md  DOCUMENTATION_UPDATE_REPORT.md  FILTER_FIX.md  IMPLEMENTATION_SUMMARY.md  MASTER_PLAN.md  README.md  TODO.md  TODO_SITE.md  TOOLS.md  TOOLS_TODO.md  TOOL_INDEX.md  TRAYCER_PLAN.md  USER_NOTES.md  USER_NOTES.txt  WARP.md  check_duplicates.py  eslint.config.mjs  package-lock.json  package.json  prettier.json  system_administration_tools.md  test_pages.html  tool_statistics.csv  validate_metadata.py  verify_tools.sh
archive/: DART_MIGRATION.md  FUTURE_TOOLS.md  README.md  TOOLS_TODO.md  VERIFICATION_IMPLEMENTATION_SUMMARY.md
archive/tui/: README.md  __init__.py  main.py  pyproject.toml
archive/tui/tools_tui/: __init__.py  main.py
archive/tui/tui/: app.py
dart_tools/: pubspec.yaml
docs/: CHEATSHEET.md  CLAUDE_GUIDE.md  DOCUMENTATION.md  DOCUMENTATION_STANDARDS.md  DOCUMENTATION_STATUS.md  IMPLEMENTATION_STATUS.md  MAINTENANCE.md  PROJECT_STATUS.md  TOOL_INDEX.md  VERIFICATION_REPORT.md  system_administration_tools.md
node_tools/: .eslintrc.json  .gitignore  .nycrc.json  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
scripts/: build_claude_md.sh  build_standalone.sh  check_plan_completion.sh  generate_site_data.sh  generate_site_data_old.sh  lib.sh  mcp_log.sh  mcp_run_dart.sh  run_validation_suite.sh  serve-local.sh  update_stats.sh  validate_anchors.sh  validate_and_fix.sh  verify_tools.sh  (+2 more)
(+108 files in other folders)
