[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tools-tui"
version = "0.1.0"
description = "Two-pane TUI to browse tools markdown files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "textual>=0.54,<1.0",
]

[project.scripts]
tools-tui = "tui.main:main"

[tool.hatch.build.targets.wheel]
packages = ["tui", "tools_tui"]
